--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Keyboard</title>
 </head>
 <body>
-    
+  <!--
+    <div class="keyboard">
+        <div class="keyboard__keys">
+            <button type="button" class="keyboard__key">a</button>
+            <button type="button" class="keyboard__key keyboard__key_wide">a</button>
+            <button type="button" class="keyboard__key keyboard__key_extra-wide">a</button>
+        </div>
+    </div>
+  -->
+    <script src="./script.js"></script>
 </body>
 </html>
