feat: add button pressings

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <!--
     <div class="keyboard">
+        <input type="text" class = 'keyboard__input-area'>
+
         <div class="keyboard__keys">
             <button type="button" class="keyboard__key">a</button>
             <button type="button" class="keyboard__key keyboard__key_wide">a</button>
